--- a/index.css
+++ b/index.css
@@ -100,14 +100,16 @@ body{
 }
 
 .Spotify {
-  display: flex;
-  width: 70px;
-  height: 70px;
   position: fixed;
   right: 20px;
   bottom: 20px;
+  width: 70px;
+  height: 70px;
 }
 
 .SpotifyIcon {
-  width: 100px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
 }
