--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body, html {
   height: 100vh;
   overflow: hidden;
   margin: 0;
-  background-image: url("./Frame.png");
+  background-image: url("./images/Frame.png");
   font-family: Arial, sans-serif;
   color: white;
 
@@ -139,18 +139,18 @@ body{
 
 /* Default icons */
 .spotify-icon-1 {
-  background-image: url('./Spotify_IconUnclear.png');
+  background-image: url('./images/Spotify_IconUnclear.png');
 }
 
 .spotify-icon-1:hover {
-  background-image: url('./Spotify_Icon.png');
+  background-image: url('./images/Spotify_Icon.png');
 }
 
 .tiktok-icon-1 {
-  background-image: url('./TT_IconUnclear.png');
+  background-image: url('./images/TT_IconUnclear.png');
 }
 
 .tiktok-icon-1:hover {
-  background-image: url('./TT_Icon.png');
+  background-image: url('./images/TT_Icon.png');
 }
 
