--- a/music.css
+++ b/music.css
@@ -12,7 +12,7 @@ body, html {
    h1 {
     border-style: solid;
     border-width: 5px;
-    
-    border-radius: 20px;
+    border-collapse: collapse;
+    border-radius: 10px;
 
    }
