--- a/music.css
+++ b/music.css
@@ -9,10 +9,40 @@ body, html {
   overflow: hidden;
 }
 
-   h1 {
-    border-style: solid;
-    border-width: 5px;
-    border-collapse: collapse;
-    border-radius: 10px;
+body{
+  position: relative;
+}
 
-   }
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px;
+  position: fixed;
+  top: 20px;
+  left: -75px;
+  z-index: 20;
+}
+
+.navbar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+}
+
+.navbar li a {
+  text-decoration: none;
+  color: white;
+  padding: 12px 24px;
+  border-radius: 12px;
+  font-weight: bold;
+  font-size: 20px;
+  transition: font-size 0.3s ease, transform 0.3s ease;
+}
+
+.navbar li a:hover {
+  font-size: 20px;
+  transform: scale(1.05);
+}
