--- a/css/music.css
+++ b/css/music.css
@@ -2,7 +2,7 @@ body, html {
   height: 100vh;
   overflow: hidden;
   margin: 0;
-  background-image: url("./images/Frame.png");
+  background-image: url("/images/Frame.png");
   font-family: Arial, sans-serif;
   color: white;
   
