--- a/css/media.css
+++ b/css/media.css
@@ -15,6 +15,40 @@
 }
 
 
+.media {
+  position: fixed;
+  bottom: 20px;
+  right: 110px;
+  padding: 0;
+  z-index: 20;
+  display: flex;
+  gap: 15px;
+  justify-content: flex-start;
+  width: auto;
+}
+
+.media ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 15px;
+}
+
+.media li {
+  display: flex;
+  align-items: center;
+}
+
+.media li a {
+  display: block;
+  height: 80px;
+  width: 80px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: background-image 0.3s ease;
+}
 
 .media li a img {
   height: 80px;
