--- a/css/home.css
+++ b/css/home.css
@@ -59,6 +59,12 @@ body{
 .Soundbar {
   width: 25px;
   height: 25px;
+
+  user-select: none;           /* Standard */
+  -webkit-user-select: none;   /* Safari */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* IE/Edge */
+
 }
 
 
