--- a/css/music.css
+++ b/css/music.css
@@ -11,4 +11,8 @@ body, html {
 
 body{
   position: relative;
+  user-select: none;           /* Standard */
+  -webkit-user-select: none;   /* Safari */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* IE/Edge */
 }
