--- a/css/music.css
+++ b/css/music.css
@@ -16,3 +16,24 @@ body{
   -moz-user-select: none;      /* Firefox */
   -ms-user-select: none;       /* IE/Edge */
 }
+
+
+
+#spotify-embeds {
+position: relative;  /* add this */
+top: 100px;
+display: flex;
+justify-content: center;
+gap: 500px;  /* large gap */
+flex-wrap: wrap;
+padding: 20px;
+}
+
+#spotify-embeds iframe {
+width: 300px;
+height: 80px;
+border-radius: 8px;
+box-shadow: 0 0 10px rgba(0,0,0,0.3);
+border: none;
+}
+
