--- a/css/contact.css
+++ b/css/contact.css
@@ -11,8 +11,8 @@ body, html {
 
 body{
   position: relative;
-  user-select: none;           /* Standard */
-  -webkit-user-select: none;   /* Safari */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* IE/Edge */
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
